--- a/styles/main.scss
+++ b/styles/main.scss
@@ -273,7 +273,7 @@ body {
         }
 
         .auth-buttons {
-            margin-left: 170px;
+            // margin-left: 170px;
             order: 2;
 
             .sign-up-btn {
