--- a/styles/main.css
+++ b/styles/main.css
@@ -95,8 +95,14 @@ body {
   z-index: 1000;
 }
 .navbar .logo {
-  height: 36px;
-  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-decoration: none;
+  color: #000000;
+  font-weight: bold;
+  font-size: 24px;
 }
 .navbar .nav-links {
   display: flex;
