--- a/styles/main.scss
+++ b/styles/main.scss
@@ -162,8 +162,11 @@ body {
     z-index: 1000;
 
     .logo {
-        height: 36px;
-        width: auto;
+        @include flex(row, flex-start, center);
+        text-decoration: none;
+        color: $color-black;
+        font-weight: bold;
+        font-size: 24px;
     }
 
     .nav-links {
