--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1147,6 +1147,11 @@ body {
         width: 100%;
         position: relative;
         padding: 5rem;
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+            padding: 2rem;
+        }
     }
 
     .newarme-container {
@@ -1178,8 +1183,8 @@ body {
             left: 44%;
 
             @media screen and (max-width: 1024px) {
-                top: 22%;
-                left: 35%;
+                top: 23%;
+                left: 34%;
             }
 
             @media screen and (max-width: 768px) {
@@ -1190,10 +1195,10 @@ body {
             }
 
             @media screen and (max-width: 480px) {
-                top: 12%;
-                left: 5%;
-                height: 60px;
-                width: 60px;
+                top: 10%;
+                left: 70%;
+                height: 100px;
+                width: 100px;
             }
         }
 
@@ -1220,8 +1225,8 @@ body {
             }
 
             @media screen and (max-width: 480px) {
-                height: 40px;
-                width: 40px;
+                height: 70px;
+                width: 70px;
             }
 
             span {
@@ -1234,7 +1239,7 @@ body {
                 }
 
                 @media screen and (max-width: 480px) {
-                    font-size: 0.9rem;
+                    font-size: 1.2rem;
                 }
             }
         }
@@ -1257,9 +1262,9 @@ body {
                 }
 
                 @media screen and (max-width: 480px) {
-                    width: 40px;
-                    height: 40px;
-                    border-width: 3px;
+                    width: 60px;
+                    height: 60px;
+                    border-width: 12px;
                 }
             }
         }
@@ -1359,15 +1364,29 @@ body {
         flex: 1;
         display: flex;
         justify-content: flex-end;
-
+    
         @media screen and (max-width: 768px) {
             justify-content: center;
             margin-top: 30px;
         }
-
+    
+        @media screen and (max-width: 480px) {
+            justify-content: center;
+            margin-top: 30px;
+            width: 100%; 
+            padding: 0 10px; 
+        }
+    
         img {
             opacity: 0.5;
             border-radius: 16px;
+            max-width: 100%; 
+            height: auto; 
+    
+            @media screen and (max-width: 480px) {
+                max-width: 400px; 
+                margin: 0 auto; 
+            }
         }
     }
 
