--- a/styles/main.scss
+++ b/styles/main.scss
@@ -98,7 +98,7 @@ $breakpoint-lg: 1024px;
 html,
 body {
     max-width: 100%;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 /* Đảm bảo container chính không bị tràn */
