--- a/styles/main.scss
+++ b/styles/main.scss
@@ -95,11 +95,11 @@ $breakpoint-lg: 1024px;
 //   }
 
 /* Reset toàn bộ layout để tránh tràn */
-html,
-body {
-    max-width: 100%;
-    // overflow-x: hidden;
-}
+// html,
+// body {
+//     max-width: 100%;
+//     // overflow-x: hidden;
+// }
 
 /* Đảm bảo container chính không bị tràn */
 .container,
