--- a/styles/main.css
+++ b/styles/main.css
@@ -1948,6 +1948,7 @@ body {
     flex-direction: column;
     text-align: center;
     padding: 24px;
+    margin-top: -60px;
   }
 }
 .subcribe .subcribe-container .subcribe-left {
@@ -2094,6 +2095,7 @@ body {
   .countries-container {
     padding: 12px;
     margin-bottom: 60px;
+    margin-top: 20px;
   }
 }
 .countries-container .countries-title {
