--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2027,6 +2027,7 @@ body {
             flex-direction: column;
             text-align: center;
             padding: 24px;
+            margin-top: -60px;
         }
 
         .subcribe-left {
@@ -2175,6 +2176,7 @@ body {
     @media screen and (max-width: 768px) {
         padding: 12px;
         margin-bottom: 60px;
+        margin-top: 20px;
     }
 
     .countries-title {
